--- a/Pagina01/css.css
+++ b/Pagina01/css.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .principal{
@@ -12,7 +12,7 @@ body {
 }
 
 .titulo-principal {
-    padding-top: 5%;
+    /* padding-top: 5%; */
 }
 
 .navegacao {
@@ -27,7 +27,6 @@ header {
     background: lightblue;
     top: 0;
     width: 100%;
-    position: fixed;
 }
 
 header p {
@@ -37,10 +36,8 @@ header p {
 footer {
     background: lightsalmon;
     bottom: 0;
-    position: fixed;
     width: 100%;
     text-align: center;
-    margin-bottom: 2%;
 }
 
 .items-header {
@@ -51,13 +48,12 @@ footer {
 
 .container{
     display: flex;
-    align-items: start;
+    /* align-items: start; */
     justify-content: space-between;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .category {
-    margin-top: 5%;
     background: lightgreen;
-    width: 100%;
+    height: 100%;
 }
