--- a/Projeto_treino/css/style.css
+++ b/Projeto_treino/css/style.css
@@ -1,168 +1,231 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 @font-face {
-    font-family: "Source Sans Pro";
-    src: url('../fonts/SourceSansPro-Regular.otf');
+  font-family: "Source Sans Pro";
+  src: url("../fonts/SourceSansPro-Regular.otf");
 }
 
 @font-face {
-    font-family: "Source Sans Pro";
-    src: url('../fonts/SourceSansPro-Bold.otf');
-    font-weight: bold;
+  font-family: "Source Sans Pro";
+  src: url("../fonts/SourceSansPro-Bold.otf");
+  font-weight: bold;
 }
 
 body {
-    font-family: "Source Sans";
+  font-family: "Source Sans";
 }
 
 .cabecalho {
-    background: #fff;
-    padding: 15px;
+  background: #fff;
+  padding: 15px;
 }
 
 .logo {
-    background-image: url("../img/logotipo-preto.png");
-    background-repeat: no-repeat;
-    display: block;
-    width: 120px;
-    height: 53px;
-    text-indent: -9999px;
-    margin: 0;    
+  background-image: url("../img/logotipo-preto.png");
+  background-repeat: no-repeat;
+  display: block;
+  width: 120px;
+  height: 53px;
+  text-indent: -9999px;
+  margin: 0;
 }
 
 .menu-principal__btn {
-    display: block;
-    width: 50px;
-    height: 50px;
-    text-indent: -9999px;
-    background-color: #fff;
-    background-image: url(../img/menuprincipal-btn-bg.png);
-    background-position: 5px 5px;
-    border-color: #c4c4c4;
-    border-style: solid;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    
+  display: block;
+  width: 50px;
+  height: 50px;
+  text-indent: -9999px;
+  background-color: #fff;
+  background-image: url(../img/menuprincipal-btn-bg.png);
+  background-position: 5px 5px;
+  border-color: #c4c4c4;
+  border-style: solid;
+  border-radius: 5px;
+  cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
 
-.menu-principal__btn--fechar{
-    background-position: -48px 7px;
+.menu-principal__btn--fechar {
+  background-position: -48px 7px;
 }
 
 .menu-principal__lista {
-    padding: 0;
+  padding: 0;
 }
 
-.menu-principal__lista li{
-    list-style: none;
+.menu-principal__lista li {
+  list-style: none;
 }
 
 .menu-principal__item {
-    display: block;
-    text-decoration: none;
-    font-weight: bold;
-    color: #343434;
-    margin-bottom: 20px;
-    font-size: 18px;
+  display: block;
+  text-decoration: none;
+  font-weight: bold;
+  color: #343434;
+  margin-bottom: 20px;
+  font-size: 18px;
 }
 
-.menu-principal__item--atual{
-    color: #f44242;
+.menu-principal__item--atual {
+  color: #f44242;
 }
+
+/* Rodapé */
 
 .rodape {
-    color: #fff;
+  color: #fff;
+}
+
+/* extra: estilização adicional para melhorar visualização dos links */
+.rodape a {
+  color: #afafaf;
 }
 
 .rodape__linha-1 {
-    background-color: #272525;
-    background-image: url("../img/fundo.jpg");
-    background-size: cover;
-    padding: 15px;
+  background-color: #272525;
+  background-image: url("../img/fundo.jpg");
+  background-size: cover;
+  background-position: center; /* extra: centraliza a imagem de fundo */
+  padding: 15px;
 }
 
 .rodape__linha-2 {
-    background-color: #000;
-    text-align: center;
-    padding: 15px;
+  background-color: #000;
+  text-align: center;
+  padding: 15px;
 }
 
 .rodape__titulo {
-    border-bottom: 1px solid #fff;
-    padding: 0 10px 10px 10px;
-    font-size: 18px;
+  border-bottom: 1px solid #fff;
+  padding: 0 10px 10px 10px;
+  font-size: 18px;
 }
 
 .rodape__lista-links {
-    padding: 0;
-    list-style: none;
+  padding: 0;
+  list-style: none;
 }
 
 .rodape__lista-links__item {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    margin-bottom: 10px;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .rodape__lista-links__item::before {
-    content: '>';
-    margin-right: 8px;
-    color: #f44242;
+  content: ">";
+  margin-right: 8px;
+  color: #f44242;
 }
 
-.rodape_coluna {
-    margin-top: 40px;
-    margin-bottom: 40px;
+.rodape__coluna {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .pagina-cabecalho {
-    background-color: #dd3f3d;
-    background-image: url(../img/cabecalho-pagina-bg.jpg);
-    background-attachment: fixed;
-    color: #fff;
-    padding-top: 40px;
-    padding-bottom: 40px;
+  background-color: #dd3f3d;
+  background-image: url(../img/cabecalho-pagina-bg.jpg);
+  background-attachment: fixed;
+  color: #fff;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
-.pagina-cabecalho__titulo{
-    text-align: center;
-    text-transform: uppercase;
+/* extra: pra centralizar o que estiver no cabecalho como no index */
+.pagina-cabecalho a {
+  display: block;
+  text-align: center;
 }
 
-.pagina-cabecalho__titulo::after{
-    content: '';
-    display: block;
-    width: 50px;
-    height: 3px;
-    background-color: #fff;
-    margin: 0 auto;
-    margin-top: 20px;
+.pagina-cabecalho__titulo {
+  text-align: center;
+  text-transform: uppercase;
 }
 
-img{
-    max-width: 100%;
-    height: auto;
+.pagina-cabecalho__titulo::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 3px;
+  background-color: #fff;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .pagina-conteudo {
-    padding: 15px;
-    padding-top: 20px;
-    padding-bottom: 25px;
+  padding: 15px;
+  padding-top: 20px;
+  padding-bottom: 25px;
 }
 
-.pagina-conteudo p{
-    color: #3a3a3a;
-    line-height: 22px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.pagina-conteudo p {
+  color: #3a3a3a;
+  line-height: 22px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
+}
+
+.lista-tematicas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
+  gap: 50px;
+  padding: 50px 0;
+  list-style: none;
+}
+
+.lista-tematicas__item {
+  text-align: center;
+}
+
+.lista-tematicas__item--especial img {
+  width: 180px;
+  transition: transform 0.3s;
+}
+
+.lista-tematicas__item--especial img:hover {
+  transform: scale(1.1);
+}
+
+/* Estilo especiaL p img do HTML que é menor que as outras */
+.item-html img {
+  height: 250px;
+  width: 250px;
+}
+
+.lista-tematicas__item img {
+  width: 100px;
+  transition: transform 0.3s;
+}
+
+.lista-tematicas__item img:hover {
+  transform: scale(1.1);
+}
+
+.lista-tematicas__item a {
+  text-decoration: none;
+}
+
+.lista-tematicas__titulo {
+  color: #000;
+  font-size: 18px;
+  margin-left: 15px;
+  /* border-left: 1px solid #000; */
+  text-align: center;
 }
